# paper-reviewer-cli

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  specs.md  zotero_sample.bib
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  TROUBLESHOOTING.md
src/paper_reviewer/: __init__.py  bibtex_parser.py  config.py  errors.py  gemini_client.py  gemini_prompts.py  logger.py  main.py  models.py  notion_client.py  notion_converter.py  notion_properties.py  pdf_finder.py  scanner.py  ui.py  zotero_parser.py
tests/: __init__.py  conftest.py  test_bibtex_parser.py  test_integration.py  test_pdf_finder.py  test_zotero_parser.py
tests/fixtures/: sample.bib  sample_latin1.bib  sample_malformed.bib  sample_utf8.bib
tests/fixtures/integration/multiple_papers/paper1/: paper1.bib
tests/fixtures/integration/multiple_papers/paper2/: paper2.bib
tests/fixtures/integration/valid_paper/: paper.bib
tests/mocks/: __init__.py
